Fix height and width to be divisible by 4

--- a/_sass/nspace/content/_expand.sass
+++ b/_sass/nspace/content/_expand.sass
@@ -1,7 +1,7 @@
 .expand
   position: relative
-  height: $icon2
-  width: $icon2
+  height: 48px
+  width: 48px
   border: 1px solid $color-text-deco
   border-radius: $border-radius-round
 
